--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
     <module>fmi-avi-xmlmodel-aixm511-wx</module>
     <module>fmi-avi-xmlmodel-wmo-metce2013</module>
     <module>fmi-avi-xmlmodel-wmo-opm2013</module>
-    <!-- module>fmi-avi-xmlmodel-iwxxm21</module -->
     <module>fmi-avi-xmlmodel-iwxxm211</module>
     <module>fmi-avi-xmlmodel-xmldsig11</module>
     <module>fmi-avi-xmlmodel-fmiavi20170704</module>
+    <module>fmi-avi-xmlmodel-wmo-collect2014</module>
 
   </modules>
   <scm>
