--- a/fmi-avi-xmlmodel-xmldsig11/pom.xml
+++ b/fmi-avi-xmlmodel-xmldsig11/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>fi.fmi.xmlmodel</groupId>
     <artifactId>fmi-avi-xmlmodel</artifactId>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
   </parent>
   <artifactId>fmi-avi-xmlmodel-xmldsig11</artifactId>
   
