--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,14 @@
     <developerConnection>scm:git:https://github.com/${github-repo-owner}/${project.artifactId}.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
+  <dependencies>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
+        <optional>true</optional>
+      </dependency>
+  </dependencies>
   <build>
     <pluginManagement>
       <plugins>
