--- a/fmi-avi-xmlmodel-iwxxm211/pom.xml
+++ b/fmi-avi-xmlmodel-iwxxm211/pom.xml
@@ -120,6 +120,14 @@
                     </goals>
                 </execution>
             </executions>
+            <dependencies>
+              <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.1</version>
+                <optional>true</optional>
+              </dependency>
+            </dependencies>
         </plugin>
     </plugins>
   </build>
