--- a/fmi-avi-xmlmodel-iwxxm30/pom.xml
+++ b/fmi-avi-xmlmodel-iwxxm30/pom.xml
@@ -121,7 +121,39 @@
             </goals>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+            <optional>true</optional>
+          </dependency>
+        </dependencies>
       </plugin>
+        <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>3.1.0</version>
+          <executions>
+            <execution>
+              <id>copy-resources</id>
+              <phase>prepare-package</phase>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+              <configuration>
+                <outputDirectory>${build.outputDirectory}/schematron/xslt</outputDirectory>
+                <resources>
+                  <resource>
+                    <directory>${basedir}/src/main/resources/</directory>
+                    <includes>
+                      <include>**/*.rdf</include>
+                    </includes>
+                  </resource>
+                </resources>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
     </plugins>
   </build>
 
