--- a/fmi-avi-xmlmodel-wmo-collect2014/pom.xml
+++ b/fmi-avi-xmlmodel-wmo-collect2014/pom.xml
@@ -88,6 +88,14 @@
             </goals>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+            <optional>true</optional>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
